--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +19,9 @@
     "react-inlinesvg": "^4.0.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-swiper": "^0.1.5",
     "styled-components": "^6.0.7",
+    "swiper": "^10.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
