--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-scroll": "^1.8.7",
     "antd": "^5.8.3",
+    "framer-motion": "^10.15.2",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
