--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mizdebski77.github.io/Homepage/",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@tanstack/react-query": "^4.32.6",
@@ -16,6 +17,7 @@
     "@types/react-scroll": "^1.8.7",
     "antd": "^5.8.3",
     "framer-motion": "^10.15.2",
+    "gh-pages": "^6.0.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
