--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mizdebski77.github.io/Homepage/",
+  "homepage": "https://mizdebski77.github.io/Personal-HomePage/",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@tanstack/react-query": "^4.32.6",
@@ -26,7 +26,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-swiper": "^0.1.5",
-    "styled-components": "^6.0.7",
+    "styled-components": "5.3",
     "swiper": "^10.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -45,9 +45,6 @@
       "react-app/jest"
     ]
   },
-  "ignoreDependencies": [
-    "swiper"
-  ],
   "browserslist": {
     "production": [
       ">0.2%",
