Chamges added to json file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mizdebski77.github.io/Personal-HomePage/",
+  "homepage": "https://mizdebski77.github.io/Homepage/",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@tanstack/react-query": "^4.32.6",
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-scroll": "^1.8.7",
+    "@types/styled-components": "^5.1.26",
     "antd": "^5.8.3",
     "framer-motion": "^10.15.2",
     "gh-pages": "^6.0.0",
